--- a/h20.html
+++ b/h20.html
@@ -15,6 +15,14 @@
 		
 	</div>
 
+	
+	<div class="bio">
+		<p>Having trouble selecting a movie?</p>
+		<p>Use the Actor Randomizer to find an Actor/Actress. Google their name and browse their discography to
+			find something up your alley!</p>
+			 <em>Pro-tip: If you use AppleTV you can search for movies via Actor name. Cheers!</em>
+	</div>
+
 
         <script src="./h20.js"></script>
     </body>
